Fix Android version/Desktop version on small screen problem where number tabs don't fit on the screen.

--- a/media/bootstrap_css/bsl.css
+++ b/media/bootstrap_css/bsl.css
@@ -93,7 +93,7 @@ body, html {
 
 
 #publicsign #signinfo {
-     width: 700px;
+     max-width: 700px;
      margin: auto;
 }
 
